--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@ Junwei Zhang is an assistant researcher at Center for Artificial Intelligence an
 <!--软件著作权-->
 <nav>Software Copyrights:</nav>
 <section>
-	<div>基于定义与场景匹配机制的（长尾）词义消歧平台 V1.0, 著作权人: <b>张俊伟</b>, 登记号: 2023R11L1962186.</div>
-	<div>基于解耦表征学习方法的(长尾)词义消歧平台 V1.0, 著作权人: <b>张俊伟</b>, 登记号: 2023R11L1962186.</div>
-	<div>基于类量子表征学习方法的(长尾)词义消歧平台 V1.0, 著作权人: <b>张俊伟</b>, 登记号: 2023R11L1962186.</div>
+	<div>基于定义与场景匹配机制的（长尾）词义消歧平台 V1.0. 著作权人: <b>张俊伟</b>, 登记号: 2023R11L1962186.</div>
+	<div>基于解耦表征学习方法的(长尾)词义消歧平台 V1.0. 著作权人: <b>张俊伟</b>, 登记号: 2023R11L1962186.</div>
+	<div>基于类量子表征学习方法的(长尾)词义消歧平台 V1.0. 著作权人: <b>张俊伟</b>, 登记号: 2023R11L1962186.</div>
 </section>
 	
 
