--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ Junwei Zhang is an assistant researcher at Center for Artificial Intelligence an
 	<div data-level="CCF-B, IF: 0.69"><b>Junwei Zhang</b>, Yuexian Hou, Zhao Li, et al. <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> In ECAI, 2020: 1650-1657.</div>
 	<div data-level="CCF-C">Peng Guo, <b>Junwei Zhang</b>, Yuexian Hou, et al. Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. In ICTAI, 2019: 1602-1606.</div>
 	<div data-level="CCF-B">Mengnan Xiao, Ruifang He, <b>Junwei Zhang</b>, et al. Unleashing Pre-trained Masked Language Model Knowledge for Label Signal guided Event Detection. In DASFAA, 2023: 572-581.</div>
+	<div data-level="CCF-C">Ruifang He, Mengnan Xiao, Jinsong Ma, et al. Dual-Prompting Interaction with Entity Representation Enhancement for Event Argument Extraction. In NLPCC, 2023: 161-172.</div>
 	<div data-level="CCF-B">Xiang Li, Zhigang Zhao, Dawei Song, et al. Variational Autoencoder based Latent Factor Decoding of Multichannel EEG for Emotion Recognition. In BIBM, 2019: 684-687.</div>
 </section>
 
