--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!--个人简介-->
 <nav>Personal Information:</nav>
 <section>
-Junwei Zhang is an assistant researcher at Center for Artificial Intelligence and Intelligent Medicine, Institute of Basic Medicine and Cancer, Chinese Academy of Sciences, and received a Ph.D at College of Intelligence and Computing, Tianjin University, China. He is a professional member of CCF, a high-level talent in Hangzhou City, etc. His current research interests include Quantum Machine Learning, Quantum Cognition, Natural Language Processing and Bioinformatics & Computational Biology. In the past, he has published more than ten academic papers as the first author, obtained several invention patents, applied for several software copyrights, and was invited as a reviewer by Information Sciences, AAAI, ECAI, EMNLP, etc.
+Junwei Zhang is an assistant researcher at Center for Artificial Intelligence and Intelligent Medicine, Hangzhou Institute of Medicine, Chinese Academy of Sciences, and received a Ph.D at College of Intelligence and Computing, Tianjin University, China. He is a professional member of CCF, a high-level talent in Hangzhou City, etc. His current research interests include Quantum Machine Learning, Quantum Cognition, Natural Language Processing and Bioinformatics & Computational Biology. In the past, he has published more than ten academic papers as the first author, obtained several invention patents, applied for several software copyrights, and was invited as a reviewer by Information Sciences, AAAI, ECAI, EMNLP, etc.
 </section>
 
 
