--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ Junwei Zhang is an assistant researcher at Center for Artificial Intelligence an
 <!--会议论文-->
 <nav>Conference Papers:</nav>
 <section>
-	<div data-level="CCF-A, IS: 32.10"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> In AAAI, 2023: 13949-13957.</div>
-	<div data-level="CCF-B, IS: 11.00"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. <a href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> In CIKM, 2022: 2569-2579.</div>
-	<div data-level="CCF-B, IS: 4.80"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> In ECML-PKDD, 2022: 621-637.</div>
+	<div data-level="CCF-A, IS: 32.10"><b>Junwei Zhang</b>, Ruifang He<sup>*</sup>, Fengyu Guo. <a href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> In AAAI, 2023: 13949-13957.</div>
+	<div data-level="CCF-B, IS: 11.00"><b>Junwei Zhang</b>, Ruifang He<sup>*</sup>, Fengyu Guo<sup>*</sup>, et al. <a href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> In CIKM, 2022: 2569-2579.</div>
+	<div data-level="CCF-B, IS: 4.80"><b>Junwei Zhang</b>, Ruifang He<sup>*</sup>, Fengyu Guo<sup>*</sup>. <a href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> In ECML-PKDD, 2022: 621-637.</div>
 	<div data-level="CCF-C, IS: 6.30"><b>Junwei Zhang</b>, Zhao Li, Hao Peng, et al. <a href="https://qnlp.github.io/papers/IJCNN2022a.pdf" download>Feedforward Neural Network Reconstructed from High-order Quantum Systems.</a> In IEEE IJCNN, 2022: 1-8.</div>
 	<div data-level="CCF-C, IS: 6.30"><b>Junwei Zhang</b>, Zhao Li, Jianmao Xiao, et al. <a href="https://qnlp.github.io/papers/IJCNN2022b.pdf" download>Neural Network Model Reconstructed from Entangled Quantum States.</a> In IEEE IJCNN, 2022: 1-8.</div>
 	<div data-level="CCF-C, IS: 3.40"><b>Junwei Zhang</b>, Zhao Li, Juan Wang, et al. <a href="https://qnlp.github.io/papers/PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> In PAKDD, 2022: 58-70.</div>
