--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ Junwei Zhang is an assistant researcher at Center for Artificial Intelligence an
 	<div data-level="CCF-B, IS: 4.80"><b>Junwei Zhang</b>, Ruifang He<sup>*</sup>, Fengyu Guo<sup>*</sup>. <a href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> In ECML-PKDD, 2022: 621-637.</div>
 	<div data-level="CCF-C, IS: 6.30"><b>Junwei Zhang</b>, Zhao Li<sup>*</sup>, Hao Peng, et al. <a href="https://qnlp.github.io/papers/IJCNN2022a.pdf" download>Feedforward Neural Network Reconstructed from High-order Quantum Systems.</a> In IEEE IJCNN, 2022: 1-8.</div>
 	<div data-level="CCF-C, IS: 6.30"><b>Junwei Zhang</b>, Zhao Li<sup>*</sup>, Jianmao Xiao, et al. <a href="https://qnlp.github.io/papers/IJCNN2022b.pdf" download>Neural Network Model Reconstructed from Entangled Quantum States.</a> In IEEE IJCNN, 2022: 1-8.</div>
-	<div data-level="CCF-C, IS: 3.40"><b>Junwei Zhang</b>, Zhao Li, Juan Wang, et al. <a href="https://qnlp.github.io/papers/PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> In PAKDD, 2022: 58-70.</div>
-	<div data-level="CCF-C, IS: 6.30"><b>Junwei Zhang</b>, Zhao Li, Ruifang He, et al. <a href="https://qnlp.github.io/papers/IJCNN2021a.pdf" download>Interactive Quantum Classifier Inspired by Quantum Open System Theory.</a> In IEEE IJCNN, 2021: 1-7.</div>
-	<div data-level="CCF-C, IS: 6.30"><b>Junwei Zhang</b>, Ruifang He, Zhao Li, et al. <a href="https://qnlp.github.io/papers/IJCNN2021b.pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> In IEEE IJCNN, 2021: 1-8.</div>
-	<div data-level="CCF-B, IS: 2.40"><b>Junwei Zhang</b>, Yuexian Hou, Zhao Li, et al. <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> In ECAI, 2020: 1650-1657.</div>
+	<div data-level="CCF-C, IS: 3.40"><b>Junwei Zhang</b><sup>*</sup>, Zhao Li<sup>*</sup>, Juan Wang, et al. <a href="https://qnlp.github.io/papers/PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> In PAKDD, 2022: 58-70.</div>
+	<div data-level="CCF-C, IS: 6.30"><b>Junwei Zhang</b>, Zhao Li<sup>*</sup>, Ruifang He<sup>*</sup>, et al. <a href="https://qnlp.github.io/papers/IJCNN2021a.pdf" download>Interactive Quantum Classifier Inspired by Quantum Open System Theory.</a> In IEEE IJCNN, 2021: 1-7.</div>
+	<div data-level="CCF-C, IS: 6.30"><b>Junwei Zhang</b>, Ruifang He<sup>*</sup>, Zhao Li<sup>*</sup>, et al. <a href="https://qnlp.github.io/papers/IJCNN2021b.pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> In IEEE IJCNN, 2021: 1-8.</div>
+	<div data-level="CCF-B, IS: 2.40"><b>Junwei Zhang</b>, Yuexian Hou<sup>*</sup>, Zhao Li<sup>*</sup>, et al. <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> In ECAI, 2020: 1650-1657.</div>
 	<div data-level="CCF-C, IS: 2.20">Peng Guo, <b>Junwei Zhang</b>, Yuexian Hou, et al. Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. In ICTAI, 2019: 1602-1606.</div>
 	<div data-level="CCF-B, IS: 2.90">Mengnan Xiao, Ruifang He, <b>Junwei Zhang</b>, et al. Unleashing Pre-trained Masked Language Model Knowledge for Label Signal guided Event Detection. In DASFAA, 2023: 572-581.</div>
 	<div data-level="CCF-C, IS: 1.80">Ruifang He, Mengnan Xiao, Jinsong Ma, et al. Dual-Prompting Interaction with Entity Representation Enhancement for Event Argument Extraction. In NLPCC, 2023: 161-172.</div>
@@ -76,7 +76,7 @@ Junwei Zhang is an assistant researcher at Center for Artificial Intelligence an
 <!--期刊论文-->
 <nav>Journal Papers:</nav>
 <section>
-	<div data-level="SCI-4, CCF-T1, IF: 1.075"><b>Junwei Zhang</b>, Zhao Li. <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics (CJE), 2020, 29(6): 1178-1184.</div>
+	<div data-level="SCI-4, CCF-T1, IF: 1.075"><b>Junwei Zhang</b><sup>*</sup>, Zhao Li<sup>*</sup>. <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics (CJE), 2020, 29(6): 1178-1184.</div>
 </section>
 
 
