--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Junwei Zhang is an assistant researcher at Center for Artificial Intelligence an
 <!--软件著作权-->
 <nav>Software Copyrights:</nav>
 <section>
-	<div>著作权人: <b>张俊伟</b>. 基于定义与场景匹配机制的（长尾）词义消歧平台 V1.0. 登记号: 2023SR1537483.</div>
+	<div>著作权人: <b>张俊伟</b>. 基于定义与场景匹配机制的（长尾）词义消歧平台 V1.0. 登记号: <a href="https://qnlp.github.io/copyrights/782624565005242368.pdf" download>2023SR1537483</a>.</div>
 	<div>著作权人: <b>张俊伟</b>. 基于解耦表征学习方法的（长尾）词义消歧平台 V1.0. 登记号: 2023R11L2027440.</div>
 	<div>著作权人: <b>张俊伟</b>. 基于类量子表征学习方法的（长尾）词义消歧平台 V1.0. 登记号: 2023R11L1962186.</div>
 </section>
