--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ Junwei Zhang is an assistant researcher at Center for Artificial Intelligence an
 <!--会议论文-->
 <nav>Conference Papers:</nav>
 <section>
+	<div data-level="CCF-A, IS: 32.10"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. Quantum Interference Model for Semantic Biases of Glosses in Word Sense Disambiguation. In AAAI, 2024: 1-9.</div>
 	<div data-level="CCF-A, IS: 32.10"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> In AAAI, 2023: 13949-13957.</div>
 	<div data-level="CCF-B, IS: 11.00"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. <a href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> In CIKM, 2022: 2569-2579.</div>
 	<div data-level="CCF-B, IS: 4.80"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> In ECML-PKDD, 2022: 621-637.</div>
