--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@ Junwei Zhang is an assistant researcher at Center for Artificial Intelligence an
 <!--会议论文-->
 <nav>Conference Papers:</nav>
 <section>
-	<div data-level="CCF-A, IS: 32.10"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. Quantum Interference Model for Semantic Biases of Glosses in Word Sense Disambiguation. In AAAI, 2024: 1-9.</div>
-	<div data-level="CCF-A, IS: 32.10"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> In AAAI, 2023: 13949-13957.</div>
-	<div data-level="CCF-B, IS: 11.00"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. <a href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> In CIKM, 2022: 2569-2579.</div>
-	<div data-level="CCF-B, IS: 4.80"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> In ECML-PKDD, 2022: 621-637.</div>
-	<div data-level="CCF-C, IS: 6.30"><b>Junwei Zhang</b>, Zhao Li, Hao Peng, et al. <a href="https://qnlp.github.io/papers/IJCNN2022a.pdf" download>Feedforward Neural Network Reconstructed from High-order Quantum Systems.</a> In IEEE IJCNN, 2022: 1-8.</div>
-	<div data-level="CCF-C, IS: 6.30"><b>Junwei Zhang</b>, Zhao Li, Jianmao Xiao, et al. <a href="https://qnlp.github.io/papers/IJCNN2022b.pdf" download>Neural Network Model Reconstructed from Entangled Quantum States.</a> In IEEE IJCNN, 2022: 1-8.</div>
-	<div data-level="CCF-C, IS: 3.40"><b>Junwei Zhang</b>, Zhao Li, Juan Wang, et al. <a href="https://qnlp.github.io/papers/PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> In PAKDD, 2022: 58-70.</div>
-	<div data-level="CCF-C, IS: 6.30"><b>Junwei Zhang</b>, Zhao Li, Ruifang He, et al. <a href="https://qnlp.github.io/papers/IJCNN2021a.pdf" download>Interactive Quantum Classifier Inspired by Quantum Open System Theory.</a> In IEEE IJCNN, 2021: 1-7.</div>
-	<div data-level="CCF-C, IS: 6.30"><b>Junwei Zhang</b>, Ruifang He, Zhao Li, et al. <a href="https://qnlp.github.io/papers/IJCNN2021b.pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> In IEEE IJCNN, 2021: 1-8.</div>
-	<div data-level="CCF-B, IS: 2.40"><b>Junwei Zhang</b>, Yuexian Hou, Zhao Li, et al. <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> In ECAI, 2020: 1650-1657.</div>
-	<div data-level="CCF-C, IS: 2.20">Peng Guo, <b>Junwei Zhang</b>, Yuexian Hou, et al. Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. In ICTAI, 2019: 1602-1606.</div>
-	<div data-level="CCF-B, IS: 2.90">Mengnan Xiao, Ruifang He, <b>Junwei Zhang</b>, et al. Unleashing Pre-trained Masked Language Model Knowledge for Label Signal guided Event Detection. In DASFAA, 2023: 572-581.</div>
-	<div data-level="CCF-C, IS: 1.80">Ruifang He, Mengnan Xiao, Jinsong Ma, et al. Dual-Prompting Interaction with Entity Representation Enhancement for Event Argument Extraction. In NLPCC, 2023: 161-172.</div>
-	<div data-level="CCF-B, IS: 2.60">Xiang Li, Zhigang Zhao, Dawei Song, et al. Variational Autoencoder based Latent Factor Decoding of Multichannel EEG for Emotion Recognition. In BIBM, 2019: 684-687.</div>
+	<div data-level="CCF-A"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. Quantum Interference Model for Semantic Biases of Glosses in Word Sense Disambiguation. In AAAI, 2024: 1-9.</div>
+	<div data-level="CCF-A"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> In AAAI, 2023: 13949-13957.</div>
+	<div data-level="CCF-B"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. <a href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> In CIKM, 2022: 2569-2579.</div>
+	<div data-level="CCF-B"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> In ECML-PKDD, 2022: 621-637.</div>
+	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Hao Peng, et al. <a href="https://qnlp.github.io/papers/IJCNN2022a.pdf" download>Feedforward Neural Network Reconstructed from High-order Quantum Systems.</a> In IEEE IJCNN, 2022: 1-8.</div>
+	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Jianmao Xiao, et al. <a href="https://qnlp.github.io/papers/IJCNN2022b.pdf" download>Neural Network Model Reconstructed from Entangled Quantum States.</a> In IEEE IJCNN, 2022: 1-8.</div>
+	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Juan Wang, et al. <a href="https://qnlp.github.io/papers/PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> In PAKDD, 2022: 58-70.</div>
+	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Ruifang He, et al. <a href="https://qnlp.github.io/papers/IJCNN2021a.pdf" download>Interactive Quantum Classifier Inspired by Quantum Open System Theory.</a> In IEEE IJCNN, 2021: 1-7.</div>
+	<div data-level="CCF-C"><b>Junwei Zhang</b>, Ruifang He, Zhao Li, et al. <a href="https://qnlp.github.io/papers/IJCNN2021b.pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> In IEEE IJCNN, 2021: 1-8.</div>
+	<div data-level="CCF-B"><b>Junwei Zhang</b>, Yuexian Hou, Zhao Li, et al. <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> In ECAI, 2020: 1650-1657.</div>
+	<div data-level="CCF-C">Peng Guo, <b>Junwei Zhang</b>, Yuexian Hou, et al. Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. In ICTAI, 2019: 1602-1606.</div>
+	<div data-level="CCF-B">Mengnan Xiao, Ruifang He, <b>Junwei Zhang</b>, et al. Unleashing Pre-trained Masked Language Model Knowledge for Label Signal guided Event Detection. In DASFAA, 2023: 572-581.</div>
+	<div data-level="CCF-C">Ruifang He, Mengnan Xiao, Jinsong Ma, et al. Dual-Prompting Interaction with Entity Representation Enhancement for Event Argument Extraction. In NLPCC, 2023: 161-172.</div>
+	<div data-level="CCF-B">Xiang Li, Zhigang Zhao, Dawei Song, et al. Variational Autoencoder based Latent Factor Decoding of Multichannel EEG for Emotion Recognition. In BIBM, 2019: 684-687.</div>
 </section>
 
 
