--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@ Junwei Zhang is an assistant researcher at Center for Artificial Intelligence an
 <!--发明专利-->
 <nav>Invention Patents:</nav>
 <section>
-	<div>发明人: 贺瑞芳, <b>张俊伟</b>. 专利名称: 一种融合定义与场景匹配机制的长尾词义消歧方法. 申请人: 天津大学, 申请号: CN202211131383.7.</div>
-	<div>发明人: 贺瑞芳, <b>张俊伟</b>. 专利名称: 一种融合解耦表征的长尾词义消歧方法. 申请人: 天津大学, 申请号: CN202211265279.7.</div>
-	<div>发明人: 贺瑞芳, <b>张俊伟</b>. 专利名称: 一种适用于小样本的类量子表征学习方法. 申请人: 天津大学, 申请号: CN2023100540795.</div>
-	<div>发明人: <b>张俊伟</b>, 李晓林. 专利名称: 一种基于量子干涉模型对抗词义注释间语义偏差的词义消歧方法. 申请人: 中国科学院杭州医学研究所, 申请号: CN2023100540700.</div>
+	<div>贺瑞芳, <b>张俊伟</b>. 一种融合定义与场景匹配机制的长尾词义消歧方法. 申请人: 天津大学, 申请号: CN202211131383.7.</div>
+	<div>贺瑞芳, <b>张俊伟</b>. 一种融合解耦表征的长尾词义消歧方法. 申请人: 天津大学, 申请号: CN202211265279.7.</div>
+	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 申请人: 天津大学, 申请号: CN2023100540795.</div>
+	<div><b>张俊伟</b>, 李晓林. 一种基于量子干涉模型对抗词义注释间语义偏差的词义消歧方法. 申请人: 中国科学院杭州医学研究所, 申请号: CN2023100540700.</div>
 </section>
 
 
 <!--软件著作权-->
 <nav>Software Copyrights:</nav>
 <section>
-	<div>著作权人: <b>张俊伟</b>. 软件名称: 基于定义与场景匹配机制的（长尾）词义消歧平台 V1.0. 登记号: <a href="https://qnlp.github.io/copyrights/782624565005242368.pdf" download>2023SR1537483</a>.</div>
-	<div>著作权人: <b>张俊伟</b>. 软件名称: 基于解耦表征学习方法的（长尾）词义消歧平台 V1.0. 登记号: 2023R11L2027440.</div>
-	<div>著作权人: <b>张俊伟</b>. 软件名称: 基于类量子表征学习方法的（长尾）词义消歧平台 V1.0. 登记号: 2023R11L1962186.</div>
+	<div><b>张俊伟</b>. 基于定义与场景匹配机制的（长尾）词义消歧平台 V1.0. 登记号: <a href="https://qnlp.github.io/copyrights/782624565005242368.pdf" download>2023SR1537483</a>.</div>
+	<div><b>张俊伟</b>. 基于解耦表征学习方法的（长尾）词义消歧平台 V1.0. 登记号: 2023R11L2027440.</div>
+	<div><b>张俊伟</b>. 基于类量子表征学习方法的（长尾）词义消歧平台 V1.0. 登记号: 2023R11L1962186.</div>
 </section>
 	
 
