--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 <!--个人简介-->
 <nav>Personal Information:</nav>
 <section>
-Junwei Zhang is an assistant researcher at Center for Artificial Intelligence and Intelligent Medicine, Hangzhou Institute of Medicine, Chinese Academy of Sciences, and received a Ph.D at College of Intelligence and Computing, Tianjin University, China. 
-He is a professional member of CCF, a high-level talent in Hangzhou City, etc. 
-His current research interests include Quantum Machine Learning, Quantum Cognition, Natural Language Processing, and Bioinformatics & Computational Biology. 
-In the past, he has published more than ten academic papers as the first author at artificial intelligence academic conferences such as AAAI, IJCAI, ECAI, etc., obtained multiple invention patents, applied for several software copyrights, and was invited as a reviewer by Information Sciences, AAAI, IJCAI, ECAI, EMNLP, DASFAA, etc.
+Junwei Zhang holds the position of Assistant Researcher at the Center for Artificial Intelligence and Intelligent Medicine, Hangzhou Institute of Medicine, Chinese Academy of Sciences. 
+He earned his Ph.D. from the College of Intelligence and Computing at Tianjin University, China. 
+He is a professional member of the China Computer Federation (CCF) and recognized as a high-level talent in Hangzhou City. 
+His current research pursuits encompass Quantum Machine Learning, Quantum Cognition, Natural Language Processing, and Bioinformatics & Computational Biology. 
+Throughout his career, Junwei has published more than ten academic papers as the first author at esteemed artificial intelligence conferences such as AAAI, IJCAI, ECAI, etc. 
+Additionally, he has secured multiple invention patents, applied for several software copyrights, and served as a reviewer for reputable journals and conferences including Information Sciences, AAAI, IJCAI, ECAI, EMNLP, and DASFAA.
 </section>
 
 
