--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <!--发明专利-->
 <nav>Invention Patents:</nav>
 <section>
-	<div>贺瑞芳, <b>张俊伟</b>. 一种融合定义与场景匹配机制的长尾词义消歧方法. 申请号: CN202211131383.7.</div>
-	<div>贺瑞芳, <b>张俊伟</b>. 一种融合解耦表征的长尾词义消歧方法. 申请号: CN202211265279.7.</div>
+	<div>贺瑞芳, <b>张俊伟</b>. 一种融合定义与场景匹配机制的长尾词义消歧方法. 公开号: CN115600604A.</div>
+	<div>贺瑞芳, <b>张俊伟</b>. 一种融合解耦表征的长尾词义消歧方法. 公开号: CN115600591A.</div>
 	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 申请号: CN2023100540795.</div>
 	<div><b>张俊伟</b>, 李晓林. 一种基于量子干涉模型对抗词义注释间语义偏差的词义消歧方法. 申请号: CN2023100540700.</div>
 </section>
