--- a/index.html
+++ b/index.html
@@ -104,6 +104,27 @@ Additionally, he has secured multiple invention patents, applied for several sof
 	<div><b>张俊伟</b>. 基于类量子表征学习方法的（长尾）词义消歧平台 V1.0. 登记号: 2023R11L1962186.</div>
 	<div><b>张俊伟</b>. 基于量子干涉模型对抗词义注释间语义偏差的词义消歧平台 V1.0. 登记号: 2023R11L2663934.</div>
 </section>
+
+
+<!--主持项目-->
+<nav>Hosted Projects:</nav>
+<section>
+	<div>...</div>
+</section>
+
+
+<!--参与项目-->
+<nav>Involved Projects:</nav>
+<section>
+	<div>...</div>
+</section>
+
+
+<!--所获荣誉和奖项-->
+<nav>Honors and Awards:</nav>
+<section>
+	<div>...</div>
+</section>
 	
 
 <!--底部-->
