--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <!--会议论文-->
 <nav>Conference Papers:</nav>
 <section>
+	<!--第一作者会议论文-->
 	<div data-level="CCF-A"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. Quantum Interference Model for Semantic Biases of Glosses in Word Sense Disambiguation. In AAAI, 2024: 1-9.</div>
 	<div data-level="CCF-A"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> In AAAI, 2023: 13949-13957.</div>
 	<div data-level="CCF-B"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. <a href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> In CIKM, 2022: 2569-2579.</div>
@@ -72,6 +73,8 @@ Additionally, he has secured multiple invention patents, applied for several sof
 	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Ruifang He, et al. <a href="https://qnlp.github.io/papers/IJCNN2021a.pdf" download>Interactive Quantum Classifier Inspired by Quantum Open System Theory.</a> In IEEE IJCNN, 2021: 1-7.</div>
 	<div data-level="CCF-C"><b>Junwei Zhang</b>, Ruifang He, Zhao Li, et al. <a href="https://qnlp.github.io/papers/IJCNN2021b.pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> In IEEE IJCNN, 2021: 1-8.</div>
 	<div data-level="CCF-B"><b>Junwei Zhang</b>, Yuexian Hou, Zhao Li, et al. <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> In ECAI, 2020: 1650-1657.</div>
+	<!--通信作者会议论文-->
+	<!--参与作者会议论文-->
 	<div data-level="CCF-C">Peng Guo, <b>Junwei Zhang</b>, Yuexian Hou, et al. Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. In ICTAI, 2019: 1602-1606.</div>
 	<div data-level="CCF-B">Mengnan Xiao, Ruifang He, <b>Junwei Zhang</b>, et al. Unleashing Pre-trained Masked Language Model Knowledge for Label Signal guided Event Detection. In DASFAA, 2023: 572-581.</div>
 	<div data-level="CCF-C">Ruifang He, Mengnan Xiao, Jinsong Ma, et al. Dual-Prompting Interaction with Entity Representation Enhancement for Event Argument Extraction. In NLPCC, 2023: 161-172.</div>
@@ -82,7 +85,10 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <!--期刊论文-->
 <nav>Journal Papers:</nav>
 <section>
+	<!--第一作者期刊论文-->
 	<div data-level="SCI-4, CCF-T1, IF: 1.075"><b>Junwei Zhang</b>, Zhao Li. <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics (CJE), 2020, 29(6): 1178-1184.</div>
+	<!--通信作者期刊论文-->
+	<!--参与作者期刊论文-->
 </section>
 
 
