--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <!--参与项目-->
 <nav>Involved Projects:</nav>
 <section>
-	<div>政府间国际科技创新合作重点专项, 量子信息获取-检索的理论和应用研究, 324万, 2017YFE0111900, 2018年04月至2021年03月.</div>
-	<div>国家自然科学基金面上项目, 基于整体主义范式的量子人工智能-理论基础与方法研究, 62万, 61876129, 2019年01月至2022年12月.</div>
+	<div>政府间国际科技创新合作重点专项, 量子信息获取-检索的理论和应用研究, 324万, 2017YFE0111900, 2018.04 - 2021.03.</div>
+	<div>国家自然科学基金面上项目, 基于整体主义范式的量子人工智能-理论基础与方法研究, 62万, 61876129, 2019.01 - 2022.12.</div>
 </section>
 
 
