--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <section>
 	<div>政府间国际科技创新合作重点专项, 量子信息获取-检索的理论和应用研究, 324万, 2017YFE0111900, 2018.04 - 2021.03.</div>
 	<div>国家自然科学基金面上项目, 基于整体主义范式的量子人工智能-理论基础与方法研究, 62万, 61876129, 2019.01 - 2022.12.</div>
+	<div>国家自然科学基金面上项目, 基于标签和跨领域知识的隐式篇章关系识别, 50万, 62376192, 2024.01 - 2027.12.</div>
 </section>
 
 
