--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <title>Junwei Zhang's Homepage</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<link rel="shortcut icon" href="https://qnlp.github.io/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="https://qnlp.github.io/main.css" type="text/css" >
+<link rel="shortcut icon" href="https://qnlp.github.io/assets/favicon.ico" type="image/x-icon">
+<link rel="stylesheet" href="https://qnlp.github.io/assets/main.css" type="text/css" >
 <body>
 
 
 <!--主页头部-->
 <header>
-<img src="https://qnlp.github.io/banner.png">
+<img src="https://qnlp.github.io/assets/banner.png">
 </header>
 
 
