--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@ Additionally, he has secured multiple invention patents, applied for several sof
 	<div>贺瑞芳, <b>张俊伟</b>. 一种融合解耦表征的长尾词义消歧方法. 公开号: CN115600591A.</div>
 	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 申请号: CN2023100540795.</div>
 	<div><b>张俊伟</b>, 李晓林. 一种基于量子干涉模型对抗词义注释间语义偏差的词义消歧方法. 申请号: CN2023100540700.</div>
+	<div><b>张俊伟</b>, 李晓林. 一种基于类量子非同源表征约束机制的词义消歧方法. 申请号: CN2023100540701.</div>
+	<div><b>张俊伟</b>, 李晓林. 一种基于情感极性注意力机制的文本情感分析方法. 申请号: CN2023100540702.</div>
 </section>
 
 
@@ -109,6 +111,8 @@ Additionally, he has secured multiple invention patents, applied for several sof
 	<div><b>张俊伟</b>. 基于解耦表征学习方法的（长尾）词义消歧平台 V1.0. 登记号: 2023R11L2027440.</div>
 	<div><b>张俊伟</b>. 基于类量子表征学习方法的（长尾）词义消歧平台 V1.0. 登记号: 2023R11L1962186.</div>
 	<div><b>张俊伟</b>. 基于量子干涉模型对抗词义注释间语义偏差的词义消歧平台 V1.0. 登记号: 2023R11L2663934.</div>
+	<div><b>张俊伟</b>. 基于类量子非同源表征约束机制的（长尾）词义消歧平台 V1.0. 登记号: 2023R11L2663935.</div>
+	<div><b>张俊伟</b>. 基于情感极性注意力机制的文本情感分析平台 V1.0. 登记号: 2023R11L2663936.</div>
 </section>
 
 
