--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <section>
 	<div>Quantum Machine Learning (QML)</div>
 	<div>Natural Language Processing (NLP)</div>
+	<div>Hallucination Detection for LLM (HD4LLM)</div>
 	<div>Bioinformatics & Computational Biology (BCB)</div>
 </section>
 
