--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <section>
 	<div>贺瑞芳, <b>张俊伟</b>. 一种融合定义与场景匹配机制的长尾词义消歧方法. 公开号: CN115600604A.</div>
 	<div>贺瑞芳, <b>张俊伟</b>. 一种融合解耦表征的长尾词义消歧方法. 公开号: CN115600591A.</div>
-	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 申请号: CN2023100540795.</div>
-	<div><b>张俊伟</b>, 李晓林. 一种基于量子干涉模型的词义消歧方法、设备及存储介质. 申请号: CN202410028633.7.</div>
+	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 申请号: <a href="https://qnlp.github.io/patents/2023100540795.pdf" download>CN2023100540795</a>.</div>
+	<div><b>张俊伟</b>, 李晓林. 一种基于量子干涉模型的词义消歧方法、设备及存储介质. 申请号: <a href="https://qnlp.github.io/patents/202410028633.7.pdf" download>CN202410028633.7</a>.</div>
 </section>
 
 
