--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <!--研究方向-->
 <nav>Research Interests:</nav>
 <section>
+	<div>Large Language Model (LLM)</div>
 	<div>Quantum Machine Learning (QML)</div>
 	<div>Natural Language Processing (NLP)</div>
-	<div>Hallucination Detection for LLM (HD4LLM)</div>
 	<div>Bioinformatics & Computational Biology (BCB)</div>
 </section>
 
