--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <nav>Journal Papers:</nav>
 <section>
 	<!--第一作者期刊论文-->
-	<div data-level="SCI-4, CCF-T1, IF: 1.075"><b>Junwei Zhang</b>, Zhao Li. <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics (CJE), 2020, 29(6): 1178-1184.</div>
+	<div data-level="CCF-T1, SCI-4, IF: 1.075"><b>Junwei Zhang</b>, Zhao Li. <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics (CJE), 2020, 29(6): 1178-1184.</div>
 	<!--通信作者期刊论文-->
 	<!--参与作者期刊论文-->
 </section>
