--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <!--主持项目-->
 <nav>Hosted Projects:</nav>
 <section>
-	<div>...</div>
+	<div>杭州宇谷科技股份有限公司合作项目，10万，2024.04 - 2027.04.</div>
+	<div>杭州智源星途科技有限公司合作项目，33万，2024.01 - 2027.01.</div>
 </section>
 
 
