--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <section>
 	<!--第一作者会议论文-->
 	<div data-level="CCF-A"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. <a href="https://qnlp.github.io/papers/AAAI2024.pdf" download>Quantum Interference Model for Semantic Biases of Glosses in Word Sense Disambiguation.</a> In AAAI, 2024: 19551-19559.</div>
-	<div data-level="CCF-B"><b>Junwei Zhang</b>, Chenyang Wang, Yantao Li, et al. Emotional Polarity Attention Mechanism for Text Sentiment Analysis. In DASFAA, 2024: 1-9.</div>
+	<div data-level="CCF-B"><b>Junwei Zhang</b>, Tianheng Wang, Chenyang Wang, et al. <a href="https://qnlp.github.io/papers/DASFAA2024.pdf" download>Emotional Polarity Attention Mechanism for Text Sentiment Analysis.</a> In DASFAA, 2024: 1-9.</div>
 	<div data-level="CCF-A"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> In AAAI, 2023: 13949-13957.</div>
 	<div data-level="CCF-B"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. <a href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> In CIKM, 2022: 2569-2579.</div>
 	<div data-level="CCF-B"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> In ECML-PKDD, 2022: 621-637.</div>
