--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ Additionally, he has secured multiple invention patents, applied for several sof
 	<div data-level="CCF-C">Ruifang He, Mengnan Xiao, Jinsong Ma, <b>Junwei Zhang</b>, et al. Dual-Prompting Interaction with Entity Representation Enhancement for Event Argument Extraction. In NLPCC, 2023: 161-172.</div>
 	<div data-level="CCF-B">Xiang Li, Zhigang Zhao, Dawei Song, Yazhou Zhang, Chunyang Niu, <b>Junwei Zhang</b>, et al. Variational Autoencoder based Latent Factor Decoding of Multichannel EEG for Emotion Recognition. In BIBM, 2019: 684-687.</div>
 	<div data-level="CCF-C">Peng Guo, <b>Junwei Zhang</b>, Yuexian Hou, et al. Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. In ICTAI, 2019: 1602-1606.</div>
+	<div data-level="CCF-C">Tianyuan Niu, <b>Junwei Zhang</b>, Pengqing Zhang. Exploring the Generalization Performance of Neural Networks via Diversity. In ICONIP, 2019: 42-48.</div>
 </section>
 
 
