--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Additionally, he has secured multiple invention patents, applied for several sof
 	<div><b>张俊伟</b>. 基于解耦表征学习方法的（长尾）词义消歧平台 V1.0. 登记号: <a href="https://qnlp.github.io/copyrights/2024SR0124723.pdf" download>2024SR0124723</a>.</div>
 	<div><b>张俊伟</b>. 基于类量子表征学习方法的（长尾）词义消歧平台 V1.0. 登记号: <a href="https://qnlp.github.io/copyrights/2024SR0215346.pdf" download>2024SR0215346</a>.</div>
 	<div><b>张俊伟</b>. 基于量子干涉模型对抗词义注释间语义偏差的词义消歧平台 V1.0. 登记号: <a href="https://qnlp.github.io/copyrights/2024SR0163048.pdf" download>2024SR0163048</a>.</div>
-	<div><b>张俊伟</b>. 基于类量子非同源表征约束机制的（长尾）词义消歧平台 V1.0. 流水号: 2024R11L0233344.</div>
+	<div><b>张俊伟</b>. 基于类量子非同源表征约束机制的（长尾）词义消歧平台 V1.0. 登记号: <a href="https://qnlp.github.io/copyrights/2024SR0516979.pdf" download>2024SR0516979</a>.</div>
 	<div><b>张俊伟</b>. 基于情感极性注意力机制的文本情感分析平台 V1.0. 流水号: 2024R11L0588104.</div>
 </section>
 
