--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ Additionally, he has secured multiple invention patents, applied for several sof
 	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 申请号: <a href="https://qnlp.github.io/patents/202310054079.5.pdf" download>CN202310054079.5</a>.</div>
 	<div><b>张俊伟</b>, 李晓林. 一种基于量子干涉模型的词义消歧方法、设备及存储介质. 申请号: <a href="https://qnlp.github.io/patents/202410028633.7.pdf" download>CN202410028633.7</a>.</div>
 	<div><b>张俊伟</b>, 李晓林. 基于情感极性注意力机制的文本情感分析方法、设备及介质. 申请号: <a href="https://qnlp.github.io/patents/202410401510.3.pdf" download>CN202410401510.3</a>.</div>
+	<div><b>张俊伟</b>, 李晓林. 基于类量子非同源表征约束机制的词义消歧方法、设备及介质. 申请号: <a href="https://qnlp.github.io/patents/202410401510.3.pdf" download>CN202410401510.3</a>.</div>
 </section>
 
 
