--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <!--会议论文-->
 <nav>Conference Papers:</nav>
 <section>
-	<!-- First author's paper -->
+	<!-- Published as the first author -->
+	<p style="font-weight: bold; font-style: italic;">Published as The First Author:</p>
 	<div data-level="CCF-A"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. <a href="https://qnlp.github.io/papers/AAAI2024.pdf" download>Quantum Interference Model for Semantic Biases of Glosses in Word Sense Disambiguation.</a> In AAAI, 2024: 19551-19559.</div>
 	<div data-level="CCF-B"><b>Junwei Zhang</b>, Tianheng Wang, Chenyang Wang, et al. <a href="https://qnlp.github.io/papers/DASFAA2024.pdf" download>Emotional Polarity Attention Mechanism for Text Sentiment Analysis.</a> In DASFAA, 2024: 1-9.</div>
 	<div data-level="CCF-A"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> In AAAI, 2023: 13949-13957.</div>
@@ -74,8 +75,8 @@ Additionally, he has secured multiple invention patents, applied for several sof
 	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Ruifang He, et al. <a href="https://qnlp.github.io/papers/IJCNN2021a.pdf" download>Interactive Quantum Classifier Inspired by Quantum Open System Theory.</a> In IEEE IJCNN, 2021: 1-7.</div>
 	<div data-level="CCF-C"><b>Junwei Zhang</b>, Ruifang He, Zhao Li, et al. <a href="https://qnlp.github.io/papers/IJCNN2021b.pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> In IEEE IJCNN, 2021: 1-8.</div>
 	<div data-level="CCF-B"><b>Junwei Zhang</b>, Yuexian Hou, Zhao Li, et al. <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> In ECAI, 2020: 1650-1657.</div>
-	<!-- Corresponding author's paper -->
-	<!-- Participating author papers -->
+	<!-- Published as participating authors -->
+	<p style="font-weight: bold; font-style: italic;">Published as Participating Authors:</p>
 	<div data-level="CCF-B">Mengnan Xiao, Ruifang He, <b>Junwei Zhang</b>, et al. Unleashing Pre-trained Masked Language Model Knowledge for Label Signal guided Event Detection. In DASFAA, 2023: 572-581.</div>
 	<div data-level="CCF-C">Ruifang He, Mengnan Xiao, Jinsong Ma, <b>Junwei Zhang</b>, et al. Dual-Prompting Interaction with Entity Representation Enhancement for Event Argument Extraction. In NLPCC, 2023: 161-172.</div>
 	<div data-level="CCF-B">Xiang Li, Zhigang Zhao, Dawei Song, Yazhou Zhang, Chunyang Niu, <b>Junwei Zhang</b>, et al. Variational Autoencoder based Latent Factor Decoding of Multichannel EEG for Emotion Recognition. In BIBM, 2019: 684-687.</div>
@@ -87,9 +88,8 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <!--期刊论文-->
 <nav>Journal Papers:</nav>
 <section>
-	<!-- First author's paper -->
-	<!-- Corresponding author's paper -->
-	<!-- Participating author papers -->
+	<!-- Published as the first author -->
+	<p style="font-weight: bold; font-style: italic;">Published as The First Author:</p>
 	<div data-level="CCF-T1, SCI-4, IF: 1.2"><b>Junwei Zhang</b>, Zhao Li. <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics (CJE), 2020, 29(6): 1178-1184.</div>
 </section>
 
