--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <!--主持项目-->
 <nav>Hosted Projects:</nav>
 <section>
-	<div>...</div>
+	<div>中科院医学所人才科研启动经费, 50万, 2023.09 - 2026.08</div>
 </section>
 
 
