--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <section>
 	<!-- Published as first author -->
 	<p>Published as First Author:</p>
-	<div data-level="CCF-T1, SCI-4, IF: 1.2"><b>Junwei Zhang</b>, Zhao Li. <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics (CJE), 2020, 29(6): 1178-1184.</div>
+	<div data-level="CCF-T1, SCI-Q4, IF: 1.2"><b>Junwei Zhang</b>, Zhao Li. <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics (CJE), 2020, 29(6): 1178-1184.</div>
 </section>
 
 
