--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ Additionally, he has secured multiple invention patents, applied for several sof
 	<div>贺瑞芳, <b>张俊伟</b>. 一种融合定义与场景匹配机制的长尾词义消歧方法. 公开号: CN115600604A.</div>
 	<div>贺瑞芳, <b>张俊伟</b>. 一种融合解耦表征的长尾词义消歧方法. 公开号: CN115600591A.</div>
 	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 申请号: <a href="https://qnlp.github.io/patents/202310054079.5.pdf" download>CN202310054079.5</a>.</div>
-	<div><b>张俊伟</b>, 李晓林. 一种基于量子干涉模型的词义消歧方法、设备及存储介质. 公开号: CN118052226A.</div>
-	<div><b>张俊伟</b>, 李晓林. 基于情感极性注意力机制的文本情感分析方法、设备及介质. 申请号: <a href="https://qnlp.github.io/patents/202410401510.3.pdf" download>CN202410401510.3</a>.</div>
+	<div><b>张俊伟</b>, 李晓林. 一种基于量子干涉模型的词义消歧方法、设备及存储介质. 公开号: <a href="https://qnlp.github.io/patents/CN118052226A.pdf" download>CN118052226A</a>.</div>
+	<div><b>张俊伟</b>, 李晓林. 基于情感极性注意力机制的文本情感分析方法、设备及介质. 公开号: <a href="https://qnlp.github.io/patents/CN118394935A.pdf" download>CN118394935A</a>.</div>
 	<div><b>张俊伟</b>, 李晓林. 基于类量子非同源表征约束的词义消歧方法、设备及介质. 申请号: <a href="https://qnlp.github.io/patents/202410401510.3.pdf" download>CN202410401510.3</a>.</div>
 </section>
 
