--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ Additionally, he has secured multiple invention patents, applied for several sof
 <!--主持项目-->
 <nav>Hosted Projects:</nav>
 <section>
-	<div>中国科学院杭州医学研究所人才科研启动经费, 2023.09 - 2026.08.</div>
-	<div>2025年度浙江省“尖兵领雁+X”科技计划项目子课题, 2025.01 - 2026.12.</div>
+	<div>中国科学院杭州医学研究所人才科研启动经费, 50万, 2023.09 - 2026.08.</div>
+	<div>2025年度浙江省“尖兵领雁+X”科技计划项目子课题, 100万, 2025.01 - 2026.12.</div>
 </section>
 
 
