--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ He earned his Ph.D. from the College of Intelligence and Computing at Tianjin Un
 He is a professional member of the China Computer Federation (CCF) and recognized as a high-level talent in Hangzhou City. 
 His current research pursuits encompass Quantum Cognition, Quantum Machine Learning, Natural Language Processing, and Bioinformatics & Computational Biology. 
 Throughout his career, Junwei has published more than ten academic papers as the first author at esteemed artificial intelligence conferences such as AAAI, ECAI, and CIKM. 
-Additionally, he has secured multiple invention patents, applied for several software copyrights, and served as a reviewer for reputable journals and conferences including Information Sciences, AAAI, IJCAI, ECAI, EMNLP, and DASFAA.
+He has secured multiple invention patents, applied for several software copyrights, and served as a reviewer for reputable journals and conferences including Information Sciences, AAAI, IJCAI, ECAI, EMNLP, and DASFAA.
+Additionally, he has worked in-depth with leading companies in the industry, such as Alibaba, and ByteDance.
 </section>
 
  
