--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 公开号: CN118446329A.</div>
 	<div><b>张俊伟</b>, 李晓林. 一种基于量子干涉模型的词义消歧方法、设备及存储介质. 公开号: <a href="https://qnlp.github.io/patents/CN118052226A.pdf" download>CN118052226A</a>.</div>
 	<div><b>张俊伟</b>, 李晓林. 基于情感极性注意力机制的文本情感分析方法、设备及介质. 公开号: <a href="https://qnlp.github.io/patents/CN118394935A.pdf" download>CN118394935A</a>.</div>
+	<div><b>张俊伟</b>, 李晓林. 一种基于类量子非同源表征约束机制的词义消歧方法. 申请号: <a href="https://qnlp.github.io/patents/CN118394935A.pdf" download>CN118394935A</a>.</div>
+	<div><b>张俊伟</b>, 李晓林. 一种具备强相关性挖掘与参数压缩能力的多层感知机. 申请号: <a href="https://qnlp.github.io/patents/CN118394935A.pdf" download>CN118394935A</a>.</div>
 </section>
 
 
