--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 	<div><b>张俊伟</b>. 私域智能医疗信息服务系统 V1.0. 流水号: <a href="https://qnlp.github.io/copyrights/2024SR0652074.pdf" download>2024R11L2923175</a>.</div>
 	<div><b>张俊伟</b>. 私域智能医疗知识问答系统 V1.0. 流水号: <a href="https://qnlp.github.io/copyrights/2024SR0652074.pdf" download>2024R11L2923182</a>.</div>
 	<div><b>张俊伟</b>. 私域智能任务流驱动系统 V1.0. 流水号: <a href="https://qnlp.github.io/copyrights/2024SR0652074.pdf" download>2024R11L2916908</a>.</div>
+	<div><b>张俊伟</b>. 基于类量子非同源表征约束机制的词义消歧平台 V1.0. 流水号: <a href="https://qnlp.github.io/copyrights/2024SR0652074.pdf" download>2024SR0652074</a>.</div>
 </section>
 
 
