--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 	<div><b>张俊伟</b>, 李晓林. 一种基于量子干涉模型的词义消歧方法、设备及存储介质. 公开号: <a href="https://qnlp.github.io/patents/CN118052226A.pdf" download>CN118052226A</a>.</div>
 	<div><b>张俊伟</b>, 李晓林. 基于情感极性注意力机制的文本情感分析方法、设备及介质. 公开号: <a href="https://qnlp.github.io/patents/CN118394935A.pdf" download>CN118394935A</a>.</div>
 	<div><b>张俊伟</b>, 李晓林. 基于类量子非同源表征约束的词义消歧方法、设备及介质. 申请号: <a href="https://qnlp.github.io/patents/CN118394935A.pdf" download>CN118394935A</a>.</div>
-	<div><b>张俊伟</b>, 李晓林. 一种具备强相关性挖掘与参数压缩能力的多层感知机. 申请号: <a href="https://qnlp.github.io/patents/CN118394935A.pdf" download>CN118394935A</a>.</div>
+	<div><b>张俊伟</b>, 李晓林. 具备强相关性挖掘且超低学习参数的类量子多层感知机. 申请号: <a href="https://qnlp.github.io/patents/CN118394935A.pdf" download>CN118394935A</a>.</div>
 </section>
 
 
