--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ He is a professional member of the China Computer Federation (CCF) and recognize
 His current research pursuits encompass Quantum Cognition, Quantum Machine Learning, Natural Language Processing, and Bioinformatics & Computational Biology. 
 Throughout his career, Junwei has published more than ten academic papers as the first author at esteemed artificial intelligence conferences such as AAAI, ECAI, and CIKM. 
 He has secured multiple invention patents, applied for several software copyrights, and served as a reviewer for reputable journals and conferences including Information Sciences, AAAI, IJCAI, ECAI, EMNLP, and DASFAA.
-Additionally, he has worked in-depth with leading companies in the industry, such as Alibaba, and ByteDance.
+Additionally, he has worked in-depth with leading companies in the industry, such as Alibaba and ByteDance, to establish a mature industry-university-research cooperation model.
 </section>
 
  
