--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 <section>
 	<!-- Published as first author -->
 	<p>Published as First Author:</p>
-	<div data-level="CCF-A"><b>Junwei Zhang</b>, Tianheng Wang, Zeyi Zhang, et al. <a href="https://qnlp.github.io/papers/AAAI2025b.pdf" download>QiMLP: Quantum-inspired Multilayer Perceptron with Strong Correlation Mining and Parameter Compression.</a> In AAAI, 2025: 1-9. [<a class="resources" href="/appendix/AAAI2025b.pdf" download>Appendix</a>]</div>
+	<div data-level="CCF-A"><b>Junwei Zhang</b>, Tianheng Wang, Zeyi Zhang, et al. <a href="https://qnlp.github.io/papers/AAAI2025b.pdf" download>QiMLP: Quantum-inspired Multilayer Perceptron with Strong Correlation Mining and Parameter Compression.</a> In AAAI, 2025: 1-9. [<a class="resources" href="/appendix/AAAI2025b.pdf" download>Appendix</a>, <a class="resources" href="/codes/AAAI2025b.zip" download>Code</a>]</div>
 	<div data-level="CCF-A"><b>Junwei Zhang</b>, Xiaolin Li. <a href="https://qnlp.github.io/papers/AAAI2025a.pdf" download>Quantum-inspired Non-homologous Representation Constraint Mechanism for Long-tail Senses of Word Sense Disambiguation.</a> In AAAI, 2025: 1-9.</div>
 	<div data-level="CCF-A"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. <a href="https://qnlp.github.io/papers/AAAI2024.pdf" download>Quantum Interference Model for Semantic Biases of Glosses in Word Sense Disambiguation.</a> In AAAI, 2024: 19551-19559.</div>
 	<div data-level="CCF-B"><b>Junwei Zhang</b>, Tianheng Wang, Chenyang Wang, et al. <a href="https://qnlp.github.io/papers/DASFAA2024.pdf" download>Emotional Polarity Attention Mechanism for Text Sentiment Analysis.</a> In DASFAA, 2024: 3-18.</div>
