--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 <!--所获荣誉和奖项-->
 <nav>Honors and Awards:</nav>
 <section>
-	<div>...</div>
+	<div>中国科学院杭州医学研究所 2024年度优秀员工</div>
 </section>
 	
 
