--- a/pages/dasfaa2025/index.html
+++ b/pages/dasfaa2025/index.html
@@ -100,11 +100,11 @@ EF4WSD&LLM includes 7 datasets, namely Senseval-2, Senseval-3, SemEval-07, SemEv
 ALL is a dataset obtained by concatenating Senseval-2, Senseval-3, SemEval-07, SemEval-13 and SemEval-15.
 The statistical information of high- and low-frequency word senses in each dataset are shown in the table below.
 </p>
-<img src="./imgs/ef_si.png" width="95%" style="margin: 0px 25px;">
+<img src="./ef_si.png" width="95%" style="margin: 0px 25px;">
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
 <strong>Usage:</strong> The usage of this evaluation framework is the same as that of the original evaluation framework<sup>1</sup>. We just added attributes to distinguish high- and low-frequency word senses in the corresponding tags in the XML text of the datasets. The attribute <strong><i>hf="Yes"</i></strong> in the tag <strong><i>instance</i></strong> represents a high-frequency word sense, whereas the attribute <strong><i>hf="No"</i></strong> represents a low-frequency word sense (that is, long-tail word sense), as shown in the figure below.
 </p>
-<img src="./imgs/ef_xml.png" width="95%" style="margin: 0px 25px;">
+<img src="./ef_xml.png" width="95%" style="margin: 0px 25px;">
 
 
 
@@ -115,13 +115,13 @@ The statistical information of high- and low-frequency word senses in each datas
 The datasets involved in the evaluation framework can be downloaded from the link below. The evaluation metric of this evaluation framework still uses <strong>F1-score (%)</strong>. For other information not covered, please refer to the original evaluation framework<sup>1</sup>, and its link is <a href="http://lcl.uniroma1.it/wsdeval/">http://lcl.uniroma1.it/wsdeval/</a>.
 </p>
 <ul>
-	<li>Senseval-2: <a href="/datasets/senseval2.data.xml" download>download</a></li>
-	<li>Senseval-3: <a href="/datasets/senseval3.data.xml" download>download</a></li>
-	<li>SemEval-07: <a href="/datasets/semeval2007.data.xml" download>download</a></li>
-	<li>SemEval-13: <a href="/datasets/semeval2013.data.xml" download>download</a></li>
-	<li>SemEval-15: <a href="/datasets/semeval2015.data.xml" download>download</a></li>
-	<li>ALL: <a href="/datasets/ALL.data.xml" download>download</a></li>
-	<li>SemCor: <a href="/datasets/semcor.data.zip" download>download</a></li>
+	<li>Senseval-2: <a href="./senseval2.data.xml" download>download</a></li>
+	<li>Senseval-3: <a href="./senseval3.data.xml" download>download</a></li>
+	<li>SemEval-07: <a href="./semeval2007.data.xml" download>download</a></li>
+	<li>SemEval-13: <a href="./semeval2013.data.xml" download>download</a></li>
+	<li>SemEval-15: <a href="./semeval2015.data.xml" download>download</a></li>
+	<li>ALL: <a href="./ALL.data.xml" download>download</a></li>
+	<li>SemCor: <a href="./semcor.data.zip" download>download</a></li>
 </ul>
 
 
@@ -139,79 +139,79 @@ The experimental results are shown below.
 	<strong>BEM<sup>2</sup> (ACL 2020):</strong> Moving Down the Long Tail of Word Sense Disambiguation with Gloss-Informed Biencoders. 
 	<i>LINK:</i>&nbsp;&nbsp;<a href="https://arxiv.org/abs/2005.02590">arxiv.org</a>&nbsp;&nbsp;<a href="https://github.com/facebookresearch/wsd-biencoders">GitHub</a>
 </p>
-<img src="./imgs/bem.png" width="95%" style="margin: 0px 25px;">
+<img src="./bem.png" width="95%" style="margin: 0px 25px;">
 
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
 	<strong>EWISER<sup>3</sup> (ACL 2020):</strong> Through the 80% Glass Ceiling: Raising the State of the Art in Word Sense Disambiguation by Incorporating Knowledge Graph Information. 
 	<i>LINK:</i>&nbsp;&nbsp;<a href="https://aclanthology.org/2020.acl-main.255/">ACL Anthology</a>
 </p>
-<img src="./imgs/ewiser.png" width="95%" style="margin: 0px 25px;">
+<img src="./ewiser.png" width="95%" style="margin: 0px 25px;">
 
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
 	<strong>ESR<sup>4</sup> (EMNLP 2021):</strong> Improved Word Sense Disambiguation with Enhanced Sense Representations. 
 	<i>LINK:</i>&nbsp;&nbsp;<a href="https://aclanthology.org/2021.findings-emnlp.365.pdf">ACL Anthology</a>
 </p>
-<img src="./imgs/esr.png" width="95%" style="margin: 0px 25px;">
+<img src="./esr.png" width="95%" style="margin: 0px 25px;">
 
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
 	<strong>KWSD<sup>5</sup> (KBS 2020):</strong> Word Sense Disambiguation: A comprehensive knowledge exploitation framework. 
 	<i>LINK:</i>&nbsp;&nbsp;<a href="https://github.com/lwmlyy/Knowledge-based-WSD?tab=readme-ov-file">GitHub</a>&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S0950705119304344">ScienceDirect</a>
 </p>
-<img src="./imgs/kwsd.png" width="95%" style="margin: 0px 25px;">
+<img src="./kwsd.png" width="95%" style="margin: 0px 25px;">
 
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
 	<strong>BERT-WSD<sup>6</sup> (EMNLP 2020):</strong> Adapting BERT for Word Sense Disambiguation with Gloss Selection Objective and Example Sentences. 
 	<i>LINK:</i>&nbsp;&nbsp;<a href="https://github.com/BPYap/BERT-WSD">GitHub</a>&nbsp;&nbsp;<a href="https://arxiv.org/abs/2009.11795">arxiv.org</a>
 </p>
-<img src="./imgs/bert_wsd.png" width="95%" style="margin: 0px 25px;">
+<img src="./bert_wsd.png" width="95%" style="margin: 0px 25px;">
 
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
 	<strong>GlossBERT<sup>7</sup> (EMNLP 2019):</strong> GlossBERT: BERT for Word Sense Disambiguation with Gloss Knowledge. 
 	<i>LINK:</i>&nbsp;&nbsp;<a href="https://github.com/HSLCY/GlossBERT?tab=readme-ov-file">GitHub</a>&nbsp;&nbsp;<a href="https://arxiv.org/pdf/1908.07245.pdf">arxiv.org</a>
 </p>
-<img src="./imgs/glossbert.png" width="95%" style="margin: 0px 25px;">
+<img src="./glossbert.png" width="95%" style="margin: 0px 25px;">
 
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
 	<strong>ESC<sup>8</sup> (ACL 2021):</strong> ESC: Redesigning WSD with Extractive Sense Comprehension. 
 	<i>LINK:</i>&nbsp;&nbsp;<a href="https://github.com/SapienzaNLP/esc?tab=readme-ov-file">GitHub</a>&nbsp;&nbsp;<a href="https://aclanthology.org/2021.naacl-main.371/">ACL Anthology</a>
 </p>
-<img src="./imgs/esc.png" width="95%" style="margin: 0px 25px;">
+<img src="./esc.png" width="95%" style="margin: 0px 25px;">
 
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
 	<strong>SemEq-Base<sup>9</sup> (EMNLP 2021):</strong> Connect-the-Dots: Bridging Semantics between Words and Definitions via Aligning Word Sense Inventories. 
 	<i>LINK:</i>&nbsp;&nbsp;<a href="https://github.com/tencent-ailab/EMNLP21_SemEq">GitHub</a>&nbsp;&nbsp;<a href="https://arxiv.org/pdf/2110.14091.pdf">arxiv.org</a>
 </p>
-<img src="./imgs/semeq.png" width="95%" style="margin: 0px 25px;">
+<img src="./semeq.png" width="95%" style="margin: 0px 25px;">
 
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
 	<strong>ARES<sup>10</sup> (EMNLP 2020):</strong> With More Contexts Comes Better Performance: Contextualized Sense Embeddings for All-Round Word Sense Disambiguation. 
 	<i>LINK:</i>&nbsp;&nbsp;<a href="https://iris.uniroma1.it/bitstream/11573/1500017/1/Scarlini_With-More-Contexts_2020.pdf">uniroma1.it</a>
 </p>
-<img src="./imgs/ares.png" width="95%" style="margin: 0px 25px;">
+<img src="./ares.png" width="95%" style="margin: 0px 25px;">
 
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
 	<strong>LMMS<sup>11</sup> (ACL 2019):</strong> Language Modelling Makes Sense: Propagating Representations through WordNet for Full-Coverage Word Sense Disambiguation. 
 	<i>LINK:</i>&nbsp;&nbsp;<a href="https://github.com/danlou/LMMS/tree/LMMS_ACL19">GitHub</a>&nbsp;&nbsp;<a href="https://aclanthology.org/P19-1569.pdf">ACL Anthology</a>
 </p>
-<img src="./imgs/lmms.png" width="95%" style="margin: 0px 25px;">
+<img src="./lmms.png" width="95%" style="margin: 0px 25px;">
 
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
 	<strong>Syntagrank<sup>12</sup> (ACL 2020):</strong> Personalized PageRank with Syntagmatic Information for Multilingual Word Sense Disambiguation. 
 	<i>LINK:</i>&nbsp;&nbsp;<a href="https://aclanthology.org/2020.acl-demos.6/">ACL Anthology</a>
 </p>
-<img src="./imgs/syntagrank.png" width="95%" style="margin: 0px 25px;">
+<img src="./syntagrank.png" width="95%" style="margin: 0px 25px;">
 
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
 	<strong>Generationary<sup>13</sup> (ACL 2020):</strong> Generationary or “How We Went beyond Word Sense Inventories and Learned to Gloss”. 
 	<i>LINK:</i>&nbsp;&nbsp;<a href="https://aclanthology.org/2020.emnlp-main.585/">ACL Anthology</a>
 </p>
-<img src="./imgs/generationary.png" width="95%" style="margin: 0px 25px;">
+<img src="./generationary.png" width="95%" style="margin: 0px 25px;">
 
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
 	<strong>SS-WSD<sup>14</sup> (EACL 2023):</strong> Semantic Specialization for Knowledge-based Word Sense Disambiguation. 
 	<i>LINK:</i>&nbsp;&nbsp;<a href="https://github.com/s-mizuki-nlp/semantic_specialization_for_wsd">GitHub</a>&nbsp;&nbsp;<a href="https://arxiv.org/pdf/2304.11340.pdf">arxiv.org</a>
 </p>
-<img src="./imgs/sswsd.png" width="95%" style="margin: 0px 25px;">
+<img src="./sswsd.png" width="95%" style="margin: 0px 25px;">
 
 
 
@@ -258,7 +258,7 @@ The experimental model has been submitted together with the paper in the CMT sys
 
 <br><br>
 <footer>
-	Copyright © 2023 - All Rights Reserved - X X X
+	Copyright © 2023 - All Rights Reserved - Junwei Zhang
 </footer>
 
 </body>
