--- a/pages/dasfaa2025/index.html
+++ b/pages/dasfaa2025/index.html
@@ -74,8 +74,8 @@ footer{
 	<h1>EF4WSD&LLM</h1>
 	<p style="text-indent: 50px; padding: 0px 25px;">The website publishes a standard <strong>Evaluation Framework</strong> that is suitable for identifying long-tail word senses in <strong>Word Sense Disambiguation</strong> tasks and evaluating the ability of <strong>Large Language Models</strong> to understand long-tail word senses, called <strong>EF4WSD&LLM</strong>.</p>
 	<p style="font-size: 12px; text-align: right;">
-		<strong>Author:</strong> X X X, X X X and X X X<br>
-		<strong>Release Time:</strong> 2023/12/26
+		<strong>Author:</strong> Junwei Zhang<br>
+		<strong>Release Time:</strong> 2025/01/21
 	</p>
 </header>
 
@@ -224,7 +224,7 @@ The experimental results are shown below.
 
 <h4 style="text-indent: 25px;">2. Evaluation in LLMs:</h4>
 <p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">
-The experimental model has been submitted together with the paper in the CMT system and will be published on this webpage after the paper is finalized.
+See the original paper!
 </p>
 
 
@@ -252,6 +252,7 @@ The experimental model has been submitted together with the paper in the CMT sys
 
 <br><br>
 <h3 id="P5">Contact</h3>
+<p style="text-indent: 50px; padding: 0px 25px; text-align: justify;">See the original paper!</p>
 </main>
 
 
