--- a/pages/dasfaa2025/index.html
+++ b/pages/dasfaa2025/index.html
@@ -73,7 +73,7 @@ footer{
 <header>
 	<h1>EF4WSD&LLM</h1>
 	<p style="text-indent: 50px; padding: 0px 25px;">The website publishes a standard <strong>Evaluation Framework</strong> that is suitable for identifying long-tail word senses in <strong>Word Sense Disambiguation</strong> tasks and evaluating the ability of <strong>Large Language Models</strong> to understand long-tail word senses, called <strong>EF4WSD&LLM</strong>.</p>
-	<p style="font-size: 12px; text-align: right; padding: 0px 25px;">
+	<p style="font-size: 12px; text-align: right;">
 		<strong>Author:</strong> Junwei Zhang<br>
 		<strong>Release Time:</strong> 2025/01/21
 	</p>
