--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 <section>
 	<div>中国科学院杭州医学研究所人才科研启动经费, 50万, 2023.09 - 2026.08.</div>
 	<div>2025年度浙江省“尖兵领雁”科技计划项目子课题, 100万, 2025.01 - 2026.12.</div>
+	<div>中国农业大学、上海衍因科技、杭州医学所三方合作项目，35万，2025.05 - 2025.11.</div>
 </section>
 
 
