--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!--主页头部-->
 <header>
-<img src="https://qnlp.github.io/assets/banner.png">
+<img src="https://qnlp.github.io/assets/banner.png" draggable="false">
 </header>
 
 
