--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 </section>
 
 
+<!--技术标准-->
+<nav>Technical Standards:</nav>
+<section>
+	<div>团体标准, mRNA疫苗早期临床研究规范, 标准编号: T/SPPHN 005—2025, 公布日期: 2025-08-22.</div>
+	<div>团体标准, mRNA疫苗早期临床研究规范, 标准编号: T/SPPHN 005—2025, 公布日期: 2025-08-22.</div>
+</section>
+	
+
 <!--发明专利-->
 <nav>Invention Patents:</nav>
 <section>
