--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 <!--技术标准-->
 <nav>Technical Standards:</nav>
 <section>
-	<div>团体标准, mRNA疫苗早期临床研究规范, 标准编号: T/SPPHN005—2025, 公布日期: 2025-08-22.</div>
-	<div>团体标准, mRNA肿瘤疫苗开发与应用指南, 标准编号: T/CABC15—2025, 公布日期: 2025-09-20.</div>
+	<div>团体标准. mRNA疫苗早期临床研究规范, 标准编号: T/SPPHN005—2025, 公布日期: 2025-08-22.</div>
+	<div>团体标准. mRNA肿瘤疫苗开发与应用指南, 标准编号: T/CABC15—2025, 公布日期: 2025-09-20.</div>
 </section>
 	
 
