--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 <!--研究方向-->
 <nav>Research Interests:</nav>
 <section>
-	<div>Quantum Machine Learning (QML)</div>
 	<div>Natural Language Processing (NLP)</div>
-	<div>Bioinformatics & Computational Biology (BCB)</div>
+	<div>Large Language Models (LLMs)</div>
+	<div>Quantum Machine Learning (QML)</div>
+	<div>AI for Life Sciences (AI4S)</div>
 </section>
 
 
