--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 <!--研究方向-->
 <nav>Research Interests:</nav>
 <section>
-	<div>Natural Language Processing (NLP)</div>
-	<div>Large Language Models (LLMs)</div>
-	<div>Quantum Machine Learning (QML)</div>
-	<div>AI for Life Sciences (AI4S)</div>
+	<div><b>Machine Learning:</b> Large Models, Natural Language Processing</div>
+	<div><b>Quantum Computing:</b> Quantum Cognition, Quantum Machine Learning</div>
+	<div><b>AI for Lif Science:</b> AIDD, Nanobodies, Personalized Tumor Vaccines</div>
 </section>
 
 
